--- a/xmobar/PKGBUILD
+++ b/xmobar/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Arch Haskell Team <arch-haskell@haskell.org>
 
 pkgname=xmobar
-pkgver=0.42
-pkgrel=13
+pkgver=0.44
+pkgrel=4
 pkgdesc='Minimalistic Text Based Status Bar'
 url='https://hackage.haskell.org/package/xmobar'
 license=('BSD')
@@ -21,7 +21,7 @@ depends=('libxft' 'libxinerama' 'libxrandr' 'libxpm' 'ghc-libs' 'haskell-x11'
          'haskell-http-types' 'haskell-http-client-tls' 'haskell-alsa-core' 'haskell-alsa-mixer')
 makedepends=('ghc' 'uusi' 'haskell-hspec' 'haskell-temporary')
 source=(https://github.com/jaor/xmobar/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha512sums=('84126484a11534675b4c3c86a7ac95345d00d5db477fdd278e1a419a14b3ceccade47da0c5c1552b619a7d031e11caaf6b22676ba50bcc753173146c0a399b40')
+sha512sums=('0aba48b178641bf13e5fef83abec2c528817149549756c821d84d0f012143f81b8a056e065334904ad5ccaaf2a609e3fa93a0507714d8810dde4b4cdd43bb034')
 
 prepare() {
   cd xmobar-${pkgver}
@@ -31,7 +31,7 @@ prepare() {
 build() {
   cd xmobar-${pkgver}
 
-  _flags=(with_xft with_utf8 with_inotify with_mpd with_alsa with_nl80211
+  _flags=(with_xft with_inotify with_mpd with_alsa with_nl80211
           with_datezone with_mpris with_dbus with_xpm with_threaded
           with_rtsopts with_weather)
 
