--- a/archlinux-keyring/PKGBUILD
+++ b/archlinux-keyring/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 
 pkgname=archlinux-keyring
-_tag='6f1c2557a7fe3b98778de8e00dfdcdf89995aa06' # git rev-parse ${pkgver}
-pkgver=20220727
+_tag='171cae152fb553d4af401756a7276f30aad89d2e' # git rev-parse ${pkgver}
+pkgver=20220927
 pkgrel=1
 pkgdesc='Arch Linux PGP keyring'
 arch=('any')
@@ -12,7 +12,7 @@ license=('GPL3')
 groups=('base-devel')
 install=$pkgname.install
 depends=('pacman')
-makedepends=('git' 'python' 'sequoia-sq')
+makedepends=('git' 'python' 'sequoia-sq' 'pkgconf' 'systemd')
 checkdepends=('python-coverage' 'python-pytest')
 source=("archlinux-keyring::git+https://gitlab.archlinux.org/archlinux/archlinux-keyring.git#tag=${_tag}?signed")
 sha256sums=('SKIP')
