--- a/perl-net-ssleay/PKGBUILD
+++ b/perl-net-ssleay/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-net-ssleay
 _cpanname=Net-SSLeay
-pkgver=1.90
-pkgrel=3
-pkgdesc='Perl extension for using OpenSSL'
+pkgver=1.92
+pkgrel=1
+pkgdesc='Perl bindings for OpenSSL and LibreSSL'
 url='https://search.cpan.org/dist/Net-SSLeay/'
 arch=('x86_64')
 license=('custom:BSD')
@@ -16,8 +16,8 @@ replaces=('net-ssleay')
 provides=('net-ssleay')
 options=('!emptydirs')
 source=(https://cpan.metacpan.org/authors/id/C/CH/CHRISN/${_cpanname}-${pkgver}.tar.gz)
-sha512sums=('8a5f251b5ef1d8c2d619d984594a7a22ddeed2e5e726fe683a45f299d7878f4ca8ffab00480ebf5ef7a94ae1fcf6be05dfdaa68b8bfe2ad68443150765adb891')
-b2sums=('2510fa886db8b7c5f185aa1145ae1b50b7c4101a9bd80e17c8c1d77718765f288c9180464d831775c35aa94b5a6f6c8f717ecaeb4974f7280829b63f10567f22')
+sha512sums=('e9d9161ebeb7be90f4c7a0ea98f1034892ce6d33aa72872683177b19daa1f4c5819f85ea9a052a076ec8d7c21705f6c344aef64680bc881bf3218d38e8b7b173')
+b2sums=('04d97860817b013a9680e0ef29b0004ddb98da2db859761a45612c4d25b6edd16bf92645293d1108d83352bce18665721c6df05455426b32a95a42b464119a3d')
 
 build() {
   cd ${_cpanname}-${pkgver}
