--- a/uutils-coreutils/PKGBUILD
+++ b/uutils-coreutils/PKGBUILD
@@ -12,16 +12,13 @@ url='https://github.com/uutils/coreutils'
 license=('MIT')
 depends=('glibc' 'gcc-libs')
 makedepends=('rust' 'cargo' 'python-sphinx')
-source=("$url/archive/$pkgver/$pkgname-$pkgver.tar.gz"
-        tests.patch)
-sha512sums=('069ef7ba7a725b12f99e890008e4fffd0d25e4a00d031e686cc9435e5b89dbebcd496d04b4e1864f01120ece66a6e939e7c9a9d1396e88c5276d6b5b6bb9d626'
-            '1a84aefb95cf6d4ae7582948c5ab3c357269dcd5b2261006b006f7a1b37d3d2a336c47479ab98a390661ee376b9813408af849a91ba0f2bd2493c6a680e07f2a')
+source=("$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz")
+sha512sums=('069ef7ba7a725b12f99e890008e4fffd0d25e4a00d031e686cc9435e5b89dbebcd496d04b4e1864f01120ece66a6e939e7c9a9d1396e88c5276d6b5b6bb9d626')
 options=('!lto')
 
 prepare() {
   cd $_pkgname-$pkgver
   sed 's|"bin"|"builduser"|g' -i tests/by-util/test_{chgrp,chown}.rs
-  patch -Np1 < ../tests.patch
 }
 
 build() {
