--- a/aliyun-cli/PKGBUILD
+++ b/aliyun-cli/PKGBUILD
@@ -1,9 +1,10 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Orhun Parmaksız <orhun@archlinux.org>
 # Contributor: Andreas 'Segaja' Schleifer <archlinux at segaja dot de>
 
 pkgname=aliyun-cli
-_gitcommit=0afd3fbe0cbc1b6a375add45ed896454c21cd53f
-pkgver=3.0.127
+_gitcommit=c5d05abf410064a29f152e34453988fc466a517d
+pkgver=3.0.131
 pkgrel=1
 pkgdesc='Alibaba Cloud CLI'
 arch=('x86_64')
