upgpkg: gnupg 2.2.40-1: Upgrade to 2.2.40.

--- a/gnupg/PKGBUILD
+++ b/gnupg/PKGBUILD
@@ -7,47 +7,57 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=gnupg
-pkgver=2.2.39
+pkgver=2.2.40
 pkgrel=1
 pkgdesc='Complete and free implementation of the OpenPGP standard'
+arch=('x86_64')
 url='https://www.gnupg.org/'
 license=(BSD custom custom:CC0 GPL2 GPL3 LGPL3 LGPL2.1 MIT)
-arch=('x86_64')
-checkdepends=('openssh')
+depends=(
+  'bzip2' 'libbz2.so'
+  'glibc'
+  'gnutls'
+  'libgcrypt'
+  'libgpg-error'
+  'libksba'
+  'libassuan' 'libassuan.so'
+  'npth' 'libnpth.so'
+  'pinentry'
+  'readline' 'libreadline.so'
+  'sqlite'
+  'zlib'
+)
 makedepends=('libldap' 'libusb-compat' 'pcsclite')
-depends=('npth' 'libgpg-error' 'libgcrypt' 'libksba' 'libassuan' 'pinentry'
-         'bzip2' 'libbz2.so' 'readline' 'libreadline.so' 'gnutls' 'sqlite'
-         'zlib' 'glibc')
+checkdepends=('openssh')
 optdepends=(
   'libldap: gpg2keys_ldap'
   'libusb-compat: scdaemon'
   'pcsclite: scdaemon'
 )
 options=('debug')
+install=$pkgname.install
+source=(
+  "https://gnupg.org/ftp/gcrypt/${pkgname}/${pkgname}-${pkgver}.tar.bz2"{,.sig}
+  'drop-import-clean.patch'
+  'avoid-beta-warning.patch'
+)
+sha256sums=('1164b29a75e8ab93ea15033300149e1872a7ef6bdda3d7c78229a735f8204c28'
+            'SKIP'
+            '02d375f0045f56f7dd82bacdb5ce559afd52ded8b75f6b2673c39ec666e81abc'
+            '22fdf9490fad477f225e731c417867d9e7571ac654944e8be63a1fbaccd5c62d')
+b2sums=('c9a077e28b22888573bdd12029205eb5f79a463a297e400a623bc86a39eeb6454cd884d05bd96734998613c695f2c9dcc68963c7275b89938ac38ddc7ba1e229'
+        'SKIP'
+        'd598015e7f27b27840667d1656c083b4ad85d6acdd312e9929854067313a5f28415ee7eecf4d84a4b8da0385b667aaa01a9743461f5c785402a56c238274e376'
+        '7ea069e81e2d91a3154bcb62516b4b599f34596de277f95ad1ccaba73869c4f84f94f063b65026ba0bc8a72c0fd8e8e182b82346964f67ea78166b6399c923c5')
 validpgpkeys=(
   '5B80C5754298F0CB55D8ED6ABCEF7E294B092E28' # Andre Heinecke (Release Signing Key)
   '6DAA6E64A76D2840571B4902528897B826403ADA' # Werner Koch (dist signing 2020)
   'AC8E115BF73E2D8D47FA9908E98E9B2D19C6C8BD' # Niibe Yutaka (GnuPG Release Key)
   '02F38DFF731FF97CB039A1DA549E695E905BA208' # GnuPG.com (Release Signing Key 2021)
 )
-source=(
-  "https://gnupg.org/ftp/gcrypt/${pkgname}/${pkgname}-${pkgver}.tar.bz2"{,.sig}
-  'drop-import-clean.patch'
-  'avoid-beta-warning.patch'
-)
-sha256sums=('ab74db6685f026d7c0a10b527ecddecd608606a1691d15fda5d0a7f7d27e4c2f'
-            'SKIP'
-            '02d375f0045f56f7dd82bacdb5ce559afd52ded8b75f6b2673c39ec666e81abc'
-            '22fdf9490fad477f225e731c417867d9e7571ac654944e8be63a1fbaccd5c62d')
-b2sums=('a9e31830f3ef9ec6d8d461a85fcbe4b91bcac9607d3b5f13f5edc0c54505afb6c6c119cd397023b1378d96c7d0f15c0d60da1d15721e9a18eb3ea8c7b69fba83'
-        'SKIP'
-        'd598015e7f27b27840667d1656c083b4ad85d6acdd312e9929854067313a5f28415ee7eecf4d84a4b8da0385b667aaa01a9743461f5c785402a56c238274e376'
-        '7ea069e81e2d91a3154bcb62516b4b599f34596de277f95ad1ccaba73869c4f84f94f063b65026ba0bc8a72c0fd8e8e182b82346964f67ea78166b6399c923c5')
-
-install=$pkgname.install
 
 prepare() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${pkgname}-${pkgver}"
 
   local src
   for src in "${source[@]}"; do
@@ -65,7 +75,7 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${pkgname}-${pkgver}"
   ./configure \
     --prefix=/usr \
     --sysconfdir=/etc \
@@ -77,7 +87,7 @@ build() {
 }
 
 check() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${pkgname}-${pkgver}"
   make check
 }
 
@@ -86,7 +96,7 @@ package() {
   local socket_target_dir="$pkgdir/usr/lib/systemd/user/sockets.target.wants/"
   local unit
 
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install
   ln -s gpg "${pkgdir}"/usr/bin/gpg2
   ln -s gpgv "${pkgdir}"/usr/bin/gpgv2
