--- a/gajim/PKGBUILD
+++ b/gajim/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgname=gajim
-_pkgver=1.5.2
+_pkgver=1.5.3
 #_fixupver=2
 pkgver=${_pkgver}
 #pkgver=${_pkgver}.r${_fixupver}
@@ -12,13 +12,11 @@ url='https://gajim.org/'
 arch=('any')
 license=('GPL3')
 depends=('gtk3' 'gtksourceview4' 'python-cairo' 'python-gobject' 'python-keyring' 'python-nbxmpp'
-         'python-pyasn1' 'python-pyopenssl' 'python-precis_i18n' 'python-css-parser'
+         'python-pyopenssl' 'python-precis_i18n' 'python-css-parser'
          'python-distro' 'hicolor-icon-theme' 'python-pillow' 'python-gssapi' 'python-netifaces'
          'python-packaging')
 makedepends=('python-build' 'python-installer' 'python-wheel' 'python-setuptools')
-optdepends=('python-dbus: for gajim-remote and zeroconf support'
-            'avahi: serverless chatting with autodetected clients in a local network'
-            'farstream: start audio and video chat'
+optdepends=('farstream: start audio and video chat'
             'gst-plugins-good: for video/voice support'
             'gst-plugins-bad: for video/voice support'
             'gst-plugins-ugly: for video/voice support'
@@ -26,7 +24,6 @@ optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'gst-python: for video/voice support'
             'gspell: for spell checking support'
             'geoclue: share current location'
-            'gupnp-igd: request your router to forward port for file transfer'
             'libxss: measure idle time, in order to set auto status'
             'python-gnupg: encrypting chat messages with OpenPGP'
             'python-axolotl: OMEMO support'
@@ -34,8 +31,8 @@ optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'gsound: Notification Sounds')
 source=(https://www.gajim.org/downloads/${_pkgver%.*}/gajim-${_pkgver}.tar.gz)
 #source=(https://www.gajim.org/downloads/${_pkgver%.*}/gajim-${_pkgver}-${_fixupver}.tar.gz)
-sha512sums=('e6edd81de822cae27fdcea573d08a46cd3c83aaa68b0a66f87314440d606149a5813a5ddb48872c77bcf1892db742c901543f104f57a1551d8140b801b0cb8f3')
-b2sums=('605bc5acfe05949bdc31b09b2e3c750f66badcf2e534a0ac152a9c1b0fc52f987a5fd4f64ab4a871c9b9a83be076c3b7bf76e87dbe16fd59baa82c371745cdb0')
+sha512sums=('1c013fbeab1bbb5a6c9ad81d409928290a33622132cbd0ea754c0f701396d52ddc60f5af913522f412157f57bbefbbf81c3ccbfa4d2c485214734b4e8191fc2d')
+b2sums=('939bddcec56adfe4ebccb65b6b5c894a4b0b70219de2eff74b420f20861f7cd2f44096e9e8f617db58b1c133bc0fa1a9899bc6dc30e94e3cbea22f570db7c549')
 
 build() {
   cd ${pkgname}-${_pkgver}
