--- a/libressl/PKGBUILD
+++ b/libressl/PKGBUILD
@@ -1,11 +1,12 @@
 # Maintainer: Levente Polyak <anthraxx@archlinux.org>
 # Maintainer: Bruno Pagani <archange@archlinux.org>
+# Maintainer: T.J. Townsend <blakkheim@archlinux.org>
 # Contributor: Maarten de Vries <maarten@de-vri.es>
 # Contributor: Reventlov <contact@volcanis.me>
 # Contributor: kpcyrd <git@rxv.cc>
 
 pkgname=libressl
-pkgver=3.5.3
+pkgver=3.6.1
 pkgrel=1
 pkgdesc="Free version of the TLS/crypto stack forked from OpenSSL"
 arch=(x86_64)
@@ -14,8 +15,8 @@ license=(ISC custom:OpenSSL)
 depends=(glibc)
 optdepends=(ca-certificates)
 backup=(etc/libressl/openssl.cnf)
-source=(https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-${pkgver}.tar.gz{,.asc})
-sha256sums=('3ab5e5eaef69ce20c6b170ee64d785b42235f48f2e62b095fca5d7b6672b8b28'
+source=(https://cdn.openbsd.org/pub/OpenBSD/LibreSSL/libressl-${pkgver}.tar.gz{,.asc})
+sha256sums=('acfac61316e93b919c28d62d53037ca734de85c46b4d703f19fd8395cf006774'
             'SKIP')
 validpgpkeys=(A1EB079B8D3EB92B4EBD3139663AF51BD5E4D8D5) # Brent Cook <bcook@openbsd.org>
 
@@ -46,7 +47,7 @@ package() {
     make DESTDIR="${pkgdir}" install
     install -Dm644 COPYING -t "${pkgdir}"/usr/share/licenses/${pkgname}/
 
-    # Remove symlink man pages, that actually points to OpenSSL ones since the prefix is not accounted for
+    # Remove symlink man pages that point to OpenSSL ones since the prefix is not accounted for
     for manlink in $(find -L "${pkgdir}"/usr/share/man/man3/ -type l) ;
     do
         rm "${manlink}" ;
