--- a/lib32-libidn2/PKGBUILD
+++ b/lib32-libidn2/PKGBUILD
@@ -10,7 +10,7 @@ url='https://www.gnu.org/software/libidn/#libidn2'
 arch=('x86_64')
 license=('GPL2' 'LGPL3')
 depends=('libidn2' 'lib32-glibc' 'lib32-libunistring')
-makedepends=('gtk-doc' 'ruby-ronn')
+makedepends=('gtk-doc' 'ruby-ronn-ng')
 source=(https://ftp.gnu.org/gnu/libidn/libidn2-${pkgver}.tar.gz{,.sig})
 sha256sums=('93caba72b4e051d1f8d4f5a076ab63c99b77faee019b72b9783b267986dbb45f'
             'SKIP')
