--- a/sequoia/PKGBUILD
+++ b/sequoia/PKGBUILD
@@ -3,8 +3,8 @@
 
 pkgbase=sequoia
 pkgname=(sequoia-ffi python-sequoia)
-pkgver=1.10.0
-pkgrel=1
+pkgver=1.6.0
+pkgrel=3
 pkgdesc='Cool new OpenPGP implementation'
 url='https://sequoia-pgp.org/'
 arch=('x86_64')
@@ -24,9 +24,16 @@ validpgpkeys=(
 
 prepare() {
   cd ${pkgbase}
-  sed 's/debug/release/g' -i -- */Makefile
+  sed 's/debug/release/g' -i -- */Makefile */*/Makefile */*/*/Makefile
   sed "s/-L/${LDFLAGS},-L/g" -i ffi/lang/python/Makefile
   ln -s .Makefile Makefile
+
+  # buffered-reader, ipc: Fix documentation typo.
+  git format-patch -1 --stdout 0d2bccd81ebb | patch -Np1
+  # buffered-reader, openpgp: Fix macro's doctests.
+  git format-patch -1 --stdout 9d4be0b243b6 | patch -Np1
+  # ipc, net: Fix assert_send_and_sync's doctests.
+  git format-patch -1 --stdout d603790fe37e ipc | patch -Np1
 }
 
 build() {
