--- a/emptyepsilon/PKGBUILD
+++ b/emptyepsilon/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=emptyepsilon
 pkgver=2022.03.16
-pkgrel=1
+pkgrel=2
 pkgdesc='Open source spaceship bridge simulator'
 url='https://github.com/daid/EmptyEpsilon'
 arch=('x86_64')
@@ -11,11 +11,14 @@ license=('GPL2')
 depends=('libglvnd' 'libx11' 'libxrandr' 'glibc' 'gcc-libs' 'sdl2')
 makedepends=('git' 'cmake' 'mesa' 'python')
 source=("git+https://github.com/daid/EmptyEpsilon.git#tag=EE-${pkgver}"
-        "git+https://github.com/daid/SeriousProton.git#tag=EE-${pkgver}")
+        "git+https://github.com/daid/SeriousProton.git#tag=EE-${pkgver}"
+        gcc12.patch)
 sha512sums=('SKIP'
-            'SKIP')
+            'SKIP'
+            '479b76b604b4a4fc8152da11775533b8d56eb4bfd688a28ea6c64a39bfe40e5d365ee035f34cf3fa2cfa16d877cb5324bd2b911270e19f55e77d60386b08ed13')
 
 prepare() {
+  patch -Np0 <gcc12.patch
   # fix shader loading, should be upstreamed
   sed 's|new Engine();|chdir(RESOURCE_BASE_DIR); new Engine();|' -i EmptyEpsilon/src/main.cpp
 }
