--- a/openntpd/PKGBUILD
+++ b/openntpd/PKGBUILD
@@ -1,4 +1,5 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: T.J. Townsend <blakkheim@archlinux.org>
 # Contributor: Vesa Kaihlavirta <vegai@iki.fi>
 # Contributor: Mark Rosenstand <mark@borkware.net>
 # Contributor: Giorgio Lando <patroclo7@gmail.com> (adjtimex patch)
@@ -6,9 +7,9 @@
 
 pkgname=openntpd
 pkgver=6.8p1
-pkgrel=3
+pkgrel=4
 pkgdesc='Free, easy to use implementation of the Network Time Protocol'
-url='http://www.openntpd.org/'
+url='https://www.openntpd.org/'
 arch=('x86_64')
 license=('BSD')
 depends=('glibc' 'libressl')
@@ -26,12 +27,13 @@ validpgpkeys=('A1EB079B8D3EB92B4EBD3139663AF51BD5E4D8D5') # Brent Cook <bcook@op
 prepare() {
   cd ${pkgname}-${pkgver}
   autoreconf -fiv
-  sed 's|pool.ntp.org|2.arch.pool.ntp.org|' -i ntpd.conf
+  sed -i 's|pool.ntp.org|2.arch.pool.ntp.org|' ntpd.conf
 }
 
 build() {
   cd ${pkgname}-${pkgver}
-  CFLAGS+=' -fcommon -I/usr/include/libressl -L/usr/lib/libressl -Wl,-rpath=/usr/lib/libressl' ./configure \
+  CFLAGS+=' -fcommon -I/usr/include/libressl -L/usr/lib/libressl -Wl,-rpath=/usr/lib/libressl' \
+    ./configure \
     --prefix=/usr \
     --sysconfdir=/etc \
     --sbindir=/usr/bin \
