upgpkg: java-openjdk 19.0.1.u10-3

--- a/java-openjdk/PKGBUILD
+++ b/java-openjdk/PKGBUILD
@@ -12,7 +12,7 @@ _securityver=1
 _updatever=10
 pkgver=${_majorver}.${_minorver}.${_securityver}.u${_updatever}
 #pkgver=${_majorver}.u${_updatever}
-pkgrel=2
+pkgrel=3
 _git_tag=jdk-${_majorver}.${_minorver}.${_securityver}+${_updatever}
 #_git_tag=jdk-${_majorver}+${_updatever}
 arch=('x86_64')
@@ -100,7 +100,7 @@ build() {
     --with-lcms=system \
     --with-zlib=system \
     --with-harfbuzz=system \
-    --with-jvm-features=zgc \
+    --with-jvm-features=zgc,shenandoahgc \
     --enable-unlimited-crypto \
     --disable-warnings-as-errors \
     ${NUM_PROC_OPT}
