--- a/signal-desktop/PKGBUILD
+++ b/signal-desktop/PKGBUILD
@@ -3,28 +3,31 @@
 
 pkgname=signal-desktop
 _pkgname=Signal-Desktop
-pkgver=5.62.0
+pkgver=5.63.1
 pkgrel=1
 pkgdesc="Signal Private Messenger for Linux"
 license=('AGPL3')
 arch=('x86_64')
 url="https://signal.org"
 depends=('gtk3' 'libvips' 'libxss' 'hicolor-icon-theme' 'alsa-lib' 'openjpeg2')
-makedepends=('yarn' 'git' 'git-lfs' 'nodejs-lts-gallium' 'npm' 'python' 'libxcrypt-compat')
+makedepends=('yarn' 'git' 'git-lfs' 'nodejs' 'npm' 'python' 'libxcrypt-compat')
 source=(
   "${pkgname}-${pkgver}.tar.gz::https://github.com/signalapp/${_pkgname}/archive/v${pkgver}.tar.gz"
   "${pkgname}.desktop"
   "expire-from-source-date-epoch.patch"
 )
-sha512sums=('2a2f915836101d38ffe2802d3c076d74632222f1ab6620b521042ba6973b469bba3c8a0786ed51ba94a5b3309c7ec787d8e1df4a91ce0b8146137e117765aed0'
+sha512sums=('9a4e9a7094dfd34aca1dc032b1c0d97ab71138014c46efb4d6b88a3e5aa3787d72b06df62d7b65ed3cd39d1e76a7fcea6822a813dc803f17a2d7eb16e2b74612'
             '90cfee563a985bc73c4e7984715d190ae0b5c7aa887a7dc15c665980ca5cc8420b02f6c7a54e032c29e18876d5d51cfbe5027a9f0a59de3903f50fd469d73ce0'
             '1154859e87d8a2d649bc23210f2dd8aa473f268166559a51a2a64fe6ae094c101121535623b05b711bd87aab1f219627e9274fa542fdb0e5fe6f34b46fd7b7df')
-b2sums=('e870a9000aac816aa702748d7fc0d6c91a3afd9857a018fa9a5692313a4d3900825b4b7d2eba885217b4a53daa3df0541d866b626968aa1819732b897813e98e'
+b2sums=('4380976d611b0f0c7873296e13013a294af595f142cd2ea7afe3bfa97bad816ab2053c13587a64eaa4cef7de7999dc66794369bca83124cd141140756893d396'
         'b0974f1409bf77e917a3ecce68a9d066eaf24a6cd35e0d52b0d61fcf2fb014f19962bb445b6eaf668081d370c69c01b08420c056902907574a29a71a4f0f2457'
         '5a6dba4bfa799403ace721b143c5b54d3bff97ab0c3d30e94d312cf58ede2498886720247b0efcbbeffc0c95611a493625cef1f8bc06d3647b53ef2e44de96be')
 
 prepare() {
   cd "${_pkgname}-${pkgver}"
+
+  # temporary fix for openssl3
+  export NODE_OPTIONS=--openssl-legacy-provider
 
   # git-lfs hook needs to be installed for one of the dependencies
   git lfs install
