--- a/glslang/PKGBUILD
+++ b/glslang/PKGBUILD
@@ -2,7 +2,7 @@
 
 # Careful when upgrading this package! It usually breaks ABI without bumping soname.
 pkgname=glslang
-pkgver=11.4.0
+pkgver=11.12.0
 pkgrel=1
 pkgdesc='OpenGL and OpenGL ES shader front end and validator'
 arch=('x86_64')
@@ -13,9 +13,9 @@ makedepends=('cmake' 'ninja' 'git')
 options=('staticlibs')
 # Get the commits from known_good.json for every release
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/glslang/archive/${pkgver}.tar.gz
-        git+https://github.com/KhronosGroup/SPIRV-Tools#commit=dc72924cb31cd9f3dbc3eb47e9d926cf641e3a07
-        git+https://github.com/KhronosGroup/SPIRV-Headers#commit=dafead1765f6c1a5f9f8a76387dcb2abe4e54acd)
-sha256sums=('9bae79c2b640b60474f8944a5ab4aff3af990074636ea2a0a3c97cb86be61dfa'
+        git+https://github.com/KhronosGroup/SPIRV-Tools.git#commit=eb0a36633d2acf4de82588504f951ad0f2cecacb
+        git+https://github.com/KhronosGroup/SPIRV-Headers.git#commit=85a1ed200d50660786c1a88d9166e871123cce39)
+sha256sums=('7795a97450fecd9779f3d821858fbc2d1a3bf1dd602617d95b685ccbcabc302f'
             'SKIP'
             'SKIP')
 
@@ -34,16 +34,21 @@ build() {
     -Bbuild-shared \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_BUILD_TYPE=None \
     -DBUILD_SHARED_LIBS=ON
   ninja -Cbuild-shared
   cmake \
     -Bbuild-static \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_BUILD_TYPE=None \
     -DBUILD_SHARED_LIBS=OFF
   ninja -Cbuild-static
+}
+
+check() {
+  cd ${pkgname}-${pkgver}
+  ninja -Cbuild-shared test
 }
 
 package() {
