upgpkg: i3status 2.14-1 switch to sha256sums

--- a/i3status/PKGBUILD
+++ b/i3status/PKGBUILD
@@ -17,8 +17,8 @@ makedepends=('asciidoc' 'xmlto' 'meson')
 backup=('etc/i3status.conf')
 options=('docs')
 source=("$url/$pkgname-$pkgver.tar.xz"{,.asc})
-md5sums=('55a4bb05362947947bc93f705f5d71cd'
-         'SKIP')
+sha256sums=('5c4d0273410f9fa3301fd32065deda32e9617fcae8b3cb34793061bf21644924'
+            'SKIP')
 validpgpkeys=('424E14D703E7C6D43D9D6F364E7160ED4AC8EE1D') # Michael Stapelberg
 
 build() {
