--- a/python-bluepy/PKGBUILD
+++ b/python-bluepy/PKGBUILD
@@ -3,13 +3,13 @@
 _pyname=bluepy-v
 pkgname=python-bluepy
 pkgver=1.3.0
-pkgrel=5
+pkgrel=6
 pkgdesc='Python module for interfacing with Bluetooth LE devices through Bluez'
 url='https://github.com/IanHarvey/bluepy'
 arch=('x86_64')
 license=('GPL2')
-depends=('python' 'python-setuptools' 'bluez' 'glib2')
-makedepends=('python-sphinx')
+depends=('python' 'bluez' 'glib2')
+makedepends=('python-setuptools' 'python-sphinx')
 options=('!makeflags')
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/IanHarvey/bluepy/archive/v/${pkgver}.tar.gz)
 sha256sums=('878e68e6d0f2823a5ebc5763e97ed887cc599120a5cc0bac577b7d655db6cd3e')
