upgpkg: ruby-mustermann 3.0.0-1

--- a/ruby-mustermann/PKGBUILD
+++ b/ruby-mustermann/PKGBUILD
@@ -11,7 +11,7 @@ license=('MIT')
 depends=('ruby' 'ruby-ruby2_keywords')
 options=('!emptydirs')
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/sinatra/mustermann/archive/v${pkgver}.tar.gz)
-md5sums=('6c219b73546b2c74b2bd0f2249d760f5')
+sha256sums=('3727530c67d6b79f4cca30b2629121998efd5dd80ffb192f306e625fa3539066')
 
 prepare() {
   cd ${_gemname}-${pkgver}/${_gemname}
