--- a/gputils/PKGBUILD
+++ b/gputils/PKGBUILD
@@ -13,7 +13,7 @@ url="http://gputils.sourceforge.net/"
 license=('GPL')
 depends=('glibc')
 source=("https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz")
-md5sums=('9495688c1cdcfd75bf4570ec50fad52d')
+sha256sums=('62a215e7d5575cd488a5ada66e5708ff402634abe86a9b39e4dbdb19c986ab7e')
 
 build() {
 	cd "$srcdir/$pkgname-$pkgver"
