--- a/aliyun-cli/PKGBUILD
+++ b/aliyun-cli/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Andreas 'Segaja' Schleifer <archlinux at segaja dot de>
 
 pkgname=aliyun-cli
-_gitcommit=c5d05abf410064a29f152e34453988fc466a517d
-pkgver=3.0.131
+_gitcommit=f6502987f644736c0800b4af2c1379d185f34f90
+pkgver=3.0.141
 pkgrel=1
 pkgdesc='Alibaba Cloud CLI'
 arch=('x86_64')
@@ -28,7 +28,7 @@ prepare() {
   cd ${pkgname}
   git submodule init
   git config submodule."aliyun-openapi-meta".url "${srcdir}/aliyun-openapi-meta"
-  git submodule update --init --recursive
+  git -c protocol.file.allow=always submodule update --init --recursive
 }
 
 build() {
