--- a/gnu-netcat/PKGBUILD
+++ b/gnu-netcat/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=gnu-netcat
 pkgver=0.7.1
-pkgrel=6
+pkgrel=9
 pkgdesc="GNU rewrite of netcat, the network piping application"
 depends=('glibc' 'texinfo')
 arch=('x86_64')
@@ -10,8 +10,8 @@ url="http://netcat.sourceforge.net/"
 license=('GPL')
 replaces=('netcat')
 provides=('netcat')
-source=("http://downloads.sourceforge.net/sourceforge/netcat/netcat-$pkgver.tar.bz2")
-md5sums=('0a29eff1736ddb5effd0b1ec1f6fe0ef')
+source=("https://downloads.sourceforge.net/sourceforge/netcat/netcat-$pkgver.tar.bz2")
+sha256sums=('b55af0bbdf5acc02d1eb6ab18da2acd77a400bafd074489003f3df09676332bb')
 
 build() {
   cd "${srcdir}/netcat-${pkgver}"
