upgpkg: profanity 1:0.13.1-2 Fixes FS#77026

--- a/profanity/PKGBUILD
+++ b/profanity/PKGBUILD
@@ -6,7 +6,7 @@
 pkgbase=profanity
 pkgname=('profanity' 'profanity-gtk')
 pkgver=0.13.1
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='Console based XMPP client'
 url='http://www.profanity.im'
@@ -14,13 +14,11 @@ arch=('x86_64')
 license=('GPL3')
 _clidepends=(
   'libcurl.so' 'libncursesw.so' 'expat' 'glib2' 'libotr'
-  'libnotify.so' 'libcrypt.so'
-  'libgpgme.so' 'python' 'libgcrypt' 'libsignal-protocol-c'
+  'libnotify.so' 'libgpgme.so' 'python' 'libgcrypt' 'libsignal-protocol-c'
   'glibc' 'libreadline.so' 'libassuan' 'libgpg-error' 'libstrophe.so'
   )
 _gtkdepends=(
-  'libgtk-3.so' 'libxss' 'libx11' 'libpango-1.0.so'
-  'gdk-pixbuf2' 'libatk-1.0.so' 'cairo'
+  'libgtk-3.so' 'libxss' 'libx11' 'gdk-pixbuf2' 'cairo'
   )
 makedepends=(
   ${_clidepends[@]} ${_gtkdepends[@]} 'autoconf-archive'
@@ -53,6 +51,7 @@ build() {
       --enable-otr \
       --enable-omemo \
       --enable-pgp
+    sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
     make
   )
   echo "Building gtk variant..."
@@ -68,6 +67,7 @@ build() {
       --enable-otr \
       --enable-omemo \
       --enable-pgp
+    sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
     make
   )
 }
