--- a/radare2/PKGBUILD
+++ b/radare2/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Guillermo Ramos <0xwille at gmail dot com>
 
 pkgname=radare2
-pkgver=5.7.8
-pkgrel=1
+pkgver=5.8.0
+pkgrel=2
 pkgdesc='Open-source tools to disasm, debug, analyze and manipulate binary files'
 url='https://radare.org'
 arch=('x86_64')
@@ -15,8 +15,8 @@ makedepends=('meson')
 optdepends=('r2ghidra: ghidra decompiler plugin')
 options=('!emptydirs')
 source=(https://github.com/radare/radare2/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha512sums=('7c819a052f5e4b3da72b945915fca92a747c52dc2e2fa8483a8c2d8e71479ce374efbbe2bc02b1b4af26db6a891b6e44cdbb9e062de2f13b22a258cceab561f6')
-b2sums=('628b0c146a8e797f34f43f8d76166fb8c5e945a45232c2e4d63b2c2ce89aef96a20349c519ceb62921bad75ce5faaa8ea51ab1dac79156e00eef8f9ef06f5a45')
+sha512sums=('a780e595e8fd5c821cd8eea5ee61e2a0476ed4f9e72490eae244d4a110a34000a0cdb73463beac7ff18177d269cf7ae00a3a146e6d6aeb61b48bc543b622c7a2')
+b2sums=('b0d746c392f52ffa1ed078cda7342af22719addf2ec92ab3fb12091340c632dcd6663348988f9db5d1aaa3a8c69476deae3569410a294976a0f7b6b116b2c3de')
 
 build() {
   cd ${pkgname}-${pkgver}
@@ -42,6 +42,8 @@ package() {
   DESTDIR="${pkgdir}" ninja -C build install
   cp -r doc/* "${pkgdir}/usr/share/doc/radare2"
   ln -s /usr/share/man/man1/radare2.1.gz "${pkgdir}/usr/share/man/man1/r2.1.gz"
+# Install missing header
+  install -Dm644 shlr/sdb/include/sdb/rangstr.h -t "$pkgdir"/usr/include/libr/sdb
 }
 
 # vim: ts=2 sw=2 et:
