upgpkg: lib32-libpsl 0.21.2-1: Update to 0.21.2, sync source with 64 bit package

--- a/lib32-libpsl/PKGBUILD
+++ b/lib32-libpsl/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Maxime Gauduin <alucryd@archlinux.org>
 
 pkgname=lib32-libpsl
-pkgver=0.21.1
-pkgrel=3
+pkgver=0.21.2
+pkgrel=1
 pkgdesc='Public Suffix List library (32-bit)'
 url='https://github.com/rockdaboot/libpsl'
 arch=('x86_64')
@@ -11,18 +11,11 @@ license=('MIT')
 depends=('libpsl' 'lib32-glibc' 'lib32-libidn2' 'lib32-libunistring')
 makedepends=('git' 'libxslt' 'meson' 'ninja' 'python' 'publicsuffix-list')
 provides=('libpsl.so')
-_tag=a5e6f26cce82898c54a0caa6dda0ab924b806daf
-source=(git+https://github.com/rockdaboot/libpsl.git#tag=${_tag})
-sha512sums=('SKIP')
-
-pkgver() {
-  cd libpsl
-
-  git describe --tags | sed 's/^V//'
-}
+source=(https://github.com/rockdaboot/libpsl/releases/download/${pkgver}/libpsl-${pkgver}.tar.gz)
+sha512sums=('f1df72220bf4391d4701007100b0df66c833a2cbcb7481c9d13f0b9e0cad3b66d2d15d4b976e5bad60d2ad1540355112fa1acb07aa925c241d2d7cd20681c71d')
 
 prepare() {
-  cd libpsl
+  cd libpsl-$pkgver
 
   rm -frv list
 }
@@ -32,9 +25,9 @@ build() {
   export CXX='g++ -m32'
   export PKG_CONFIG_PATH='/usr/lib32/pkgconfig'
 
-  arch-meson libpsl build \
+  arch-meson libpsl-$pkgver build \
     --libdir=/usr/lib32 \
-    -Dbuiltin=libidn2 \
+    -Dbuiltin=true \
     -Druntime=libidn2 \
     -Dpsl_file=/usr/share/publicsuffix/effective_tld_names.dat \
     -Dpsl_distfile=/usr/share/publicsuffix/public_suffix_list.dat \
