--- a/nasm/PKGBUILD
+++ b/nasm/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgname=nasm
-pkgver=2.15.05
+pkgver=2.16.01
 pkgrel=1
 pkgdesc='80x86 assembler designed for portability and modularity'
 url='https://www.nasm.us'
@@ -10,21 +10,25 @@ arch=('x86_64')
 license=('BSD')
 depends=('glibc')
 makedepends=('perl-font-ttf' 'perl-sort-versions' 'fontconfig' 'adobe-source-sans-pro-fonts'
-             'ttf-liberation' 'ghostscript' 'xmlto' 'asciidoc')
+             'ttf-liberation' 'ghostscript' 'xmlto' 'asciidoc' 'diffutils')
 source=(https://www.nasm.us/pub/nasm/releasebuilds/${pkgver}/${pkgname}-${pkgver}.tar.xz)
-sha512sums=('512f90a2584f1c5811429274b97c64a2cedf37b9fdeffb1bcd0ea64afd9ecc19a2d7877ca8f1e05393aa324153fc9f39ea51dacbf8d25a7d5a2d7728c925dba7')
-b2sums=('a41434965c2125577b762d907a0a3c251c75d9f9beac230fba4099182c7f7beb08c6d2c05c2432b0dc8ba829f24077f44c3096faea9bd0a533250e6dbbfaef35')
+sha512sums=('51fccb5639ce019d9c423c0f279750ffbd74c64cd41dd3b185d1aa1a1aaed79c5d3cd8d4bebbc13ee249a375ed27457ea2abde1a4dbb24d354598fffd1254833')
+b2sums=('0f7e96648e3db6fa4a8e10a89885f61cab7d79af25adbcc9d4706b3af61206c3cae024b7f873d636f5c1b2cb34ce5e7fbecc16af9b59086e9a1f49fb37c59670')
 
 build() {
   cd ${pkgname}-${pkgver}
   ./configure --prefix=/usr
   make
-  make -C doc
+}
+
+check() {
+  cd ${pkgname}-${pkgver}
+  make -j1 -C test golden test diff
 }
 
 package() {
   cd ${pkgname}-${pkgver}
-  make DESTDIR="${pkgdir}" install install_rdf
+  make DESTDIR="${pkgdir}" install
   install -Dm 644 LICENSE -t "${pkgdir}"/usr/share/licenses/nasm
 }
 
