upgpkg: python-pybluez 0.23.r58.g4d46ce1-2: rebuild with python 3.11

--- a/python-pybluez/PKGBUILD
+++ b/python-pybluez/PKGBUILD
@@ -1,27 +1,47 @@
-# Maintainer: Sergej Pupykin <pupykin.s+arch@gmail.com>
+# Maintainer: Levente Polyak <anthraxx@archlinux.org>
+# Contributor: Sergej Pupykin <pupykin.s+arch@gmail.com>
 # Contributor: cs-cam - me.at.camdaniel.com
 
-_pkgname=PyBluez
+_pkgname=pybluez
 pkgname=python-pybluez
-pkgver=0.23
-pkgrel=4
+pkgver=0.23.r58.g4d46ce1
+# somewhere past 0.23 as upstream hasn't released in ages ;_;
+_commit=4d46ce14d9e888e3b0c65d5d3ba2a703f8e5e861
+pkgrel=2
 pkgdesc="Python wrapper for the BlueZ Bluetooth stack"
 arch=('x86_64')
 url="https://pybluez.github.io/"
-license=('GPL')
-depends=('python' 'bluez-libs')
-makedepends=('python-setuptools')
-source=("https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz")
-sha256sums=('c8f04d2e78951eaa9de486b4d49381704e8943d0a6e6e58f55fcd7b8582e90de')
-b2sums=('6a234d5c41dc0bb9f08559431eafcf1d1fb1c881d2cb912cc048e2717bfe8a06f09aae045d2961c9ba5e087422cfc8249a1907368eb6dc45942175bcf97b1841')
+license=('GPL2')
+depends=(
+  'bluez-libs'
+  'glibc'
+  'python'
+)
+makedepends=(
+  'git'
+  'python-build'
+  'python-installer'
+  'python-setuptools'
+  'python-wheel'
+)
+# optdepends=('python-gattlib: for Bluetooth Low Energy device support')  # TODO: needs to be packaged
+source=(
+  git+https://github.com/pybluez/pybluez#commit=$_commit
+)
+sha256sums=('SKIP')
+b2sums=('SKIP')
+
+pkgver() {
+  cd $_pkgname
+  git describe --long --tags --abbrev=7 | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 build() {
-  cd "$srcdir"/$_pkgname-$pkgver
-  python setup.py build
+  cd $_pkgname
+  python -m build --wheel --no-isolation
 }
 
 package_python-pybluez() {
-  cd "$srcdir"/$_pkgname-$pkgver
-  python setup.py install --root="$pkgdir"
-#  ln -s bluetooth/_bluetooth.so "$pkgdir"/usr/lib/python3.3/site-packages/_bluetooth.so
+  cd $_pkgname
+  python -m installer --destdir="$pkgdir" dist/*.whl
 }
