upgpkg: iwd 2.4-2: add optional dependency on qrencode - FS#75099

--- a/iwd/PKGBUILD
+++ b/iwd/PKGBUILD
@@ -4,13 +4,14 @@
 
 pkgname=iwd
 pkgver=2.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Internet Wireless Daemon'
 arch=('x86_64')
 url='https://git.kernel.org/cgit/network/wireless/iwd.git/'
 license=('LGPL')
 depends=('glibc' 'readline' 'libreadline.so' 'ell')
 makedepends=('python-docutils' 'dbus' 'systemd')
+optdepends=('qrencode: for displaying QR code after DPP is started')
 source=("https://www.kernel.org/pub/linux/network/wireless/iwd-${pkgver}.tar"{.xz,.sign})
 # https://mirrors.edge.kernel.org/pub/linux/network/wireless/sha256sums.asc
 sha256sums=('3a9c5e7ade45162e5c78b3d7035a2f4a6e20ba6b5974097c35a8f615493012f9'
