upgpkg: pycharm-community-edition 2023.1.1-1

--- a/pycharm-community-edition/PKGBUILD
+++ b/pycharm-community-edition/PKGBUILD
@@ -5,16 +5,16 @@
 # Contributor: David Keogh <davekeogh@archlinux.us>
 
 pkgname=pycharm-community-edition
-pkgver=2023.1
-_build=231.8109.197
+pkgver=2023.1.1
+_build=231.8770.66
 _jrever=17
 _jdkver=17
-pkgrel=2
+pkgrel=1
 pkgdesc='Python IDE for Professional Developers'
 arch=(x86_64)
 options=(!debug)
 url=https://www.jetbrains.com/pycharm/
-license=(APACHE)
+license=(Apache)
 depends=(
   giflib
   glib2
@@ -39,14 +39,12 @@ source=(
   pycharm.desktop
   pycharm.sh
   enable-no-jdr.patch
-  fix-compile-cython-extensions-error.patch
 )
 sha256sums=('SKIP'
             'SKIP'
-            'f727119ec7c8b96820e80712b1ee342de6a94ff72402e8f2d390cbff702f9b21'
+            '70ae8df10243db2dbc454c0d8e273235707ecb1821a9e8a2e70669a1739fc1af'
             'f4c4f1dfac7fa89ac1ea407904b19d0513d481b2f6f562672d02bfa4ce32c1ff'
-            'af736aad3e3df7e6196944860521dfbdad1e9f7ecc04ac4f38a067f1b63963e5'
-            'cf7258f6fb2eb7dfe45c18719e36a8ab167a0c6e66cc7fcd9c0381a17da32c7e')
+            'af736aad3e3df7e6196944860521dfbdad1e9f7ecc04ac4f38a067f1b63963e5')
 
 prepare() {
   cd intellij-community
@@ -64,8 +62,6 @@ prepare() {
   sed 's|intellij.pycharm.community.build|"$(cd "$(dirname "$0")"; pwd)/../" intellij.pycharm.community.build|' -i python/installers.cmd
   #sed 's|intellij.pycharm.community.build|"$(cd "$(dirname "$0")"; pwd)/../" intellij.pycharm.community.build|' -i python/plugin.cmd
   patch -Np1 < "${srcdir}/enable-no-jdr.patch"
-  # https://github.com/JetBrains/intellij-community/commit/0f52c1f037e2ace96d8dbfbf4781684ccea5ed29
-  patch -Np1 < "${srcdir}/fix-compile-cython-extensions-error.patch"
 }
 
 build() {
